# distributed-database-rust

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  output.txt
common/: Cargo.toml
common/proto/: engine.proto  storage.proto  wal.proto
common/src/: errors.rs  keyvalue.rs  lib.rs  serialization.rs
data/config/: manifest.json
data/heap_files/t/: heap.db
data/heaps/t/: heap.db
data/indexes/t/: i.idx
data/wal/: 0.wal  abc_0.wal  abc_1.wal  abc_1.wal.wal  test.wal
docs/adr/: ADR-001-shared-nothing.md  ADR-002-hash-partitioning.md  ADR-003-logical-physical-planning.md  ADR-004-wal-first-writes.md  ADR-005-join-module.md  ADR-006-fail-fast.md
join/: Cargo.toml
join/src/: main.rs
log/config/: log4rs.yaml
query/: Cargo.toml  build.rs
query/src/: main.rs
src/: config.rs  main.rs
src/database_engine/: database_engine_errors.rs  manifest.rs  mod.rs  test.rs  wal.rs
storage/: Cargo.toml  build.rs  config.toml
storage/src/: btree.rs  config.rs  heap_file.rs  lib.rs  main.rs  manifest.rs  paging_btree.rs  record.rs  storage_error.rs  table.rs  wal_client.rs
storage/src/btree/: btree.rs  internal_page.rs  leaf_page.rs  location.rs  mod.rs  page.rs  tree.rs
storage/tests/: btree.rs  btree_get.rs  btree_helper.rs  btree_integration.rs  btree_push.rs  btree_remove.rs
wal/: Cargo.toml  build.rs  config.toml
wal/data/config/: manifest.json
wal/src/: config.rs  errors.rs  lib.rs  main.rs  manifest.rs  wal.rs
