[workspace]
resolver = "2"
members = ["common", "wal", "storage", "query", "join"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.29"
log4rs = "1.4.0"
serde_json = "1.0"
thiserror = "2.0"
bincode = "1.3"
toml = "1.0.7"
tonic = "0.14.5"
tokio = { version = "1.50.0", features = ["full"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
async-trait = "0.1"
tonic-reflection = "0.14"
tonic-prost-build = "0.14.5"
