[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace=true }
log = { workspace=true }
log4rs = { workspace=true }
serde_json = { workspace=true }
thiserror = { workspace=true }
bincode = { workspace=true }
toml = { workspace=true }
tonic = { workspace=true }
tokio = { workspace=true }
tonic-prost = { workspace=true }
prost = { workspace=true }
async-trait = { workspace=true }
tonic-reflection = { workspace=true }
tonic-prost-build = { workspace=true }

[build-dependencies]
tonic-prost-build = { workspace = true }
