[package]
name = "wal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wal"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.7"
thiserror = "2.0"
bincode = "1.3"
hmac-sha256 = "1.1"
rand = "0.8"
tonic = "0.14.5"
tokio = { version = "1.50.0", features = ["full"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
async-trait = "0.1"
tonic-reflection = "0.14"

[build-dependencies]
tonic-prost-build = "0.14.5"
